Börjat med hemsidan mer

--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@ div.full_width div{color:#666666; background-color:#DEDEDE;}
     <ul class="clear">
       <li class="active first"><a href="index.html">Homepage</a></li>
       <li><a href="#"></a></li>
-      <li><a href="#">Full Width</a></li>
-      <li><a href="#">Gallery</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Login</a></li>
+      <li><a href="#">Order history</a></li>
+      <li><a href="login.html">Logout</a></li>
     </ul>
   </nav>
 </div>
@@ -49,14 +47,14 @@ div.full_width div{color:#666666; background-color:#DEDEDE;}
   <div id="container">
     <!-- ################################################################################################ -->
     <div class="full_width clear">
-      <h2>Half Columns</h2>
+      <h2>Fruits</h2>
       <div class="one_half first">One Half</div>
       <div class="one_half">One Half</div>
     </div>
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <div class="full_width clear">
-      <h2>Third Columns</h2>
+      <h2>Candy</h2>
       <div class="one_third first">One Third</div>
       <div class="one_third">One Third</div>
       <div class="one_third">One Third</div>
