tog bort ful grå rad

--- a/homePage.html
+++ b/homePage.html
@@ -18,7 +18,7 @@
 <style type="text/css">
 div.full_width{margin-top:20px;}
 div.full_width:first-child{margin-top:0;}
-div.full_width div{color:#666666; background-color:#DEDEDE;}
+div.full_width div{color:#666666; background-color:#fffefe;}
 </style>
 <!-- END DEMO STYLING -->
 </head>
@@ -82,7 +82,7 @@ div.full_width div{color:#666666; background-color:#DEDEDE;}
       </div>
             </td>
         </tr>
-    </table>  <div id="container">
+    </table>  <div id="container"></div>
     <!-- ################################################################################################ -->
     </div>
     <!-- ################################################################################################ -->
