--- a/login.html
+++ b/login.html
@@ -46,12 +46,12 @@ img.avatar {
 }
 
 .container {
-  padding: 16px;
+  padding: 32px;
 }
 
 span.psw {
   float: right;
-  padding-top: 16px;
+  padding-top: 0px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
@@ -93,8 +93,7 @@ span.psw {
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <span class="psw"> <a href="createAccount.html">Create new account</a></span>
   </div>
 </form>
 
