started with shoppingCart and inspect

--- a/orderHistory.html
+++ b/orderHistory.html
@@ -43,7 +43,7 @@ div.full_width div{color:#666666; background-color:#DEDEDE;}
         <li class="active first"><a href="homePage.html">Homepage</a></li>
         <li><a href="#"></a></li>
         <li><a href="orderHistory.html">Order history</a></li>
-        <li><a href="#">Cart</a></li>
+        <li><a href="shoppingCart.html">Cart</a></li>
         <li><a href="login.html">Logout</a></li>
     </ul>
     </nav>
